2007-09-27  Kevin Cozens  <kcozens@cvs.gnome.org>

	Create SF-RUN-MODE constant for use in Script-Fu. Fixes bug #479893.

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/scheme-wrapper.h: Added set_run_mode_constant()
	which creates a new constant called SF-RUN-MODE. This constant can
	be used by Script-Fu scripts when calling a plug-in that needs to
	know the current run mode.

	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-console.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/script-fu-server.c: Added calls to create the
	new SF-RUN-MODE constant.

	* plug-ins/script-fu/scripts/difference-clouds.scm: Pass SF-RUN-MODE
	to the solid noise plug-in instead of always using RUN-INTERACTIVE.

2007-09-27  Michael Natterer  <mitch@gimp.org>

	* app/gui/ige-mac-menu.c: new version which correctly updates the
	menus when items are added or removed.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* configure.in: define HAVE_LCMS if lcms is available.

	* plug-ins/jpeg/Makefile.am: link with LIBLCMS.

	* plug-ins/jpeg/jpeg-load.c (load_image): when loading a CMYK JPEG
	file and it comes with an embedded CMYK profile, use lcms to do
	the colorspace conversion.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_thumbnail_image): same change
	here. Moved colorspace conversion to a utility function.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): get rid of one of the
	temporary buffers. We don't need an alpha channel on the preview
	layer and we can do the CMYK->RGB conversion in place.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c (run): show the dialog when called with
	GIMP_RUN_WITH_LAST_VALS. This is better than just doing nothing
	when being called from the Repeat menu item (bug #480796).

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/add-bevel.scm: fixed GimpImageType